# AgentPay

./: .env  METHOD_INTEGRATION.md  QUICKSTART_GUIDE.md  README.md  WEBHOOK_SETUP.md  app.py  auto_processor.py  demo_app.py  demo_processor.py  inboxpay.db  process_inbox.py  processed_messages.json  pyproject.toml  quick_process.py  run_demo.py  setup_webhook.py  start_agentpay.py  test_agentmail.py  test_complete_flow.py  test_extraction.py  test_gemini_fix.py  test_real_extraction.py  test_send_and_process.py  test_send_email.py  test_webhook.py  test_webhook_http.py  test_webhook_real.py
static/: styles.css
templates/: dashboard.html  index.html
